--- a/calc-style.css
+++ b/calc-style.css
@@ -1,5 +1,9 @@
-* {
-    box-sizing: border-box;
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body,
@@ -11,20 +15,22 @@ html {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 button {
     color: rgb(183, 183, 183);
     background-color: rgb(53, 97, 168);
+    box-shadow: 0 3px rgba(3, 3, 3, 0.2);
     border: 2px;
     margin: 0.1rem;
     outline: 0;
     font-size: 1.5rem;
-    transition: -webkit-transform .1s ease;
-    transition: transform .1s ease;
     transition: transform .1s ease, -webkit-transform .1s ease;
     display: flex;
-    flex: 0 1 25%;
+    flex: 1 1 20%;
     justify-content: center;
     align-items: center;
 }
@@ -32,18 +38,21 @@ button {
 button:active {
     -webkit-transform: translateY(1px);
     transform: translateY(1px);
+    box-shadow: none;
 }
 
 .calc {
     background-color: rgb(99, 59, 109);
     border-radius: 6px;
     box-shadow: 0 3px rgb(78, 46, 86);
-    height: 500px;
+    min-height: 350px;
     width: 400px;
     display: flex;
     flex-wrap: wrap;
     flex: 0 1 60%;
     min-width: 400px;
+    padding: 3px;
+    /* overflow: auto; - no longer needed*/
 }
 
 .operator {
@@ -67,10 +76,15 @@ button:active {
 .display {
     height: 2.6rem;
     border: 1px solid black;
+    border-radius: 3px;
     justify-content: flex-end;
     align-items: center;
     font-size: 1.5em;
     background: #000;
     color: #fff;
     padding: 0 10px;
+}
+
+.filler {
+    visibility: hidden;
 }
